added more media-platforms for /download command